# festa

./: .gitignore  Dockerfile  Neural_Style_Transfer.ipynb  Pipfile  README.md  pyproject.toml  setup.py
festa/detector/: ssd_module.py
festa/style_transfer/: __init__.py  models.py
style_transfer/: __init__.py  core.py  models.py  preprocessing.py
